# docker-compose-environments

./: README.md
django-with-postgres/: docker-compose.yml
django-with-postgres/django/: requirements.txt
django-with-postgres/django/composeexample/: settings.py  urls.py
django-with-postgres/django/pessoas/: admin.py  models.py
django-with-postgres/django/pessoas/migrations/: 0001_initial.py
django-with-postgres/django/receitas/: admin.py  models.py  urls.py  views.py
django-with-postgres/django/receitas/migrations/: 0001_initial.py  0002_receitas_pessoas.py  0003_receitas_publicada.py  0004_receitas_foto_receita.py
django-with-postgres/django/receitas/templates/: base.html  buscar.html  index.html  receita.html
elasticsearch/: .env  ca.crt  docker-compose.yaml  docker-compose.yaml-old  filebeat.yml  logstash.conf  metricbeat.yml  notes.txt  simple-docker-compose.yaml
elasticsearch/client-py/: client.py  generate_data.py  pyproject.toml  retrieve.py  teste.py
elasticsearch/client-py/templates/: base.html  menu.html  search.html  search_results.html  show_all.html
elasticsearch/import/: cars.csv  import.py
flask-with-sqlmodel-prometheus/: README.md  docker-compose.yaml  prometheus.yml
flask-with-sqlmodel-prometheus/web/: app.py  models.py
flask-with-sqlmodel-prometheus/web/templates/: index.html
monitoring-prometheus-grafana/: docker-compose.yml
monitoring-prometheus-grafana/backend/: index.js  package-lock.json  package.json
monitoring-prometheus-grafana/prometheus/: prometheus.yml  rules.yml
mysql-db/: docker-compose.yaml  my.cnf
(+3 files in other folders)
